# my-postgres

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_tests.yaml  tests.yaml
my-postgres/: Cargo.toml
my-postgres-core/: Cargo.toml
my-postgres-core/src/: connection_sql_operations.rs  db_row.rs  is_null.rs  lib.rs  my_postgres.rs  my_postgres_builder.rs  postgres_settings.rs  postgres_telemetry.rs  ssh.rs  utils.rs  with_retries.rs
my-postgres-core/src/connection/: connection_loop.rs  connection_string.rs  connections_pool.rs  mod.rs  postgres_connect_inner.rs  postgres_connection.rs  postgres_connection_instance.rs  postgres_read_stream.rs  postgres_row_read_stream.rs
my-postgres-core/src/group_by_fields/: group_by_avg.rs  group_by_count.rs  group_by_field_type.rs  group_by_max.rs  group_by_min.rs  group_by_sum.rs
my-postgres-core/src/sql/: raw_field.rs  select_builder.rs  sql_data.rs  sql_string.rs  sql_values.rs  where_builder.rs
my-postgres-core/src/sql_insert/: model.rs
my-postgres-core/src/sql_select/: from_db_row.rs  select_part_value.rs  select_with_params.rs  to_sql_string.rs
my-postgres-core/src/sql_update/: sql_update_model.rs  sql_update_value_provider.rs
my-postgres-core/src/sql_value/: mod.rs  sql_value_metadata.rs  sql_where_value_writer.rs
my-postgres-core/src/sql_where/: mod.rs  none_where_model.rs  raw_where_model.rs  sql_where_model.rs  str_where_model.rs
my-postgres-core/src/sql_where_value_provider/: render_full_where_condition.rs  sql_where_value_provider.rs
my-postgres-core/src/ssh/: mod.rs  port_allocator.rs  ssh_config.rs  ssh_config_builder.rs  start_ssh_tunnel.rs
my-postgres-core/src/sync_table_schema/: check_if_db_exists.rs  sync.rs  sync_indexes.rs  sync_primary_key.rs  sync_table_fields.rs  update_column.rs
my-postgres-core/src/table_schema/: sql_type_provider.rs  table_column.rs  table_column_type.rs  table_schema.rs
my-postgres-core/src/union/: mod.rs  union_model.rs
my-postgres-macros/: Cargo.toml
my-postgres-macros/src/: consts.rs  e_tag.rs  lib.rs  postgres_enum_ext.rs  postgres_struct_ext.rs  postgres_struct_schema.rs  render_impl.rs  where_fields.rs  where_utils.rs  where_value_provider.rs
my-postgres-tests/: Cargo.toml
my-postgres-tests/src/: lib.rs
my-postgres-tests/src/dto/: bulk_insert_cases.rs  mod.rs  test_array_as_jsonb.rs  test_auto_generated_types_with_operator.rs  test_auto_generated_types_with_range.rs  test_basic_cases.rs  test_json_field.rs  test_json_field_where_cases.rs  test_json_hashmap_dto.rs  test_primary_key.rs  test_select_field_as_json.rs  test_select_force_cast.rs  test_various_select_attributes.rs  test_where_inline_case.rs  test_where_inline_case_with_no_value.rs  test_where_json_field.rs  test_where_raw_model.rs  test_where_with_dynamic_json_values.rs  where_from_real_life.rs  where_model.rs  where_model_with_ignore_if_none.rs  where_model_with_opt_vec.rs  where_model_with_str.rs  where_model_with_timestamp.rs  where_model_with_vec.rs
my-postgres-tests/src/dto/e_tag_tests/: case_from_life.rs  mod.rs  test_e_tag_generator.rs
my-postgres-tests/src/dto/enum_as_update_case/: test_basic_cases_with_enum_as_number.rs  test_basic_cases_with_enum_as_string.rs  test_basic_cases_with_enum_with_model.rs
my-postgres-tests/src/dto/enum_as_where_case/: test_basic_cases_with_enum_as_number.rs  test_basic_cases_with_enum_as_string.rs  test_where_with_empty_struct.rs  where_with_lifetime.rs  where_with_limit_only.rs
my-postgres-tests/src/dto/enum_generator_tests/: mod.rs  test_enum_as_i16.rs  test_enum_as_i32.rs  test_enum_as_i8.rs  test_enum_as_str.rs  test_enum_as_string_with_model.rs  test_enum_as_u16.rs  test_enum_as_u32.rs  test_enum_as_u8.rs
my-postgres-tests/src/dto/table_schema_tests/: basic_tests.rs  mod.rs  tests_with_column_name.rs
my-postgres-tests/src/dto/test_generated_models/: mod.rs  test_timestamp.rs
my-postgres-tests/src/dto/test_group_by_cases/: mod.rs
my-postgres-tests/src/dto/test_union/: mod.rs
my-postgres-tests/src/dto/tests_real_cases/: case_with_model.rs  from_real_life.rs  mod.rs  model_with_empty_sign_status.rs  model_with_empty_vec.rs  vec_is_after_limit.rs
my-postgres/src/: lib.rs
src/: column_name.rs  connection_sql_operations.rs  connection_string.rs  connections_pool.rs  count_result.rs  db_row.rs  error.rs  input_data_value.rs  lib.rs  my_postgres.rs  my_postgres_builder.rs  postgres_connection.rs  postgres_settings.rs  rented_connection.rs  sql_formatter.rs  sql_value_as_string.rs  sql_value_writer.rs  sql_where_builder.rs  sql_where_value.rs  sql_where_writer.rs  traits.rs  utils.rs  with_retries.rs
src/code_gens/: numbered_params.rs  sql_line_builder.rs  sql_value.rs  where_builder.rs
src/connection/: connection_loop.rs  connection_string.rs  connections_pool.rs  mod.rs  postgres_connect_inner.rs  postgres_connection.rs  postgres_connection_instance.rs  table_schemes_verification.rs
src/db_schema/: db_schema.rs  mod.rs
src/group_by_fields/: group_by_avg.rs  group_by_count.rs  group_by_max.rs  group_by_min.rs  group_by_sum.rs  mod.rs
src/objects_pool/: mod.rs  object_pool.rs  rented_object.rs
src/select_builders/: bulk_select_builder.rs  mod.rs  select_with_params.rs  to_sql_string.rs  where_builder.rs
src/sql/: build_bulk_insert_or_update_sql.rs  build_bulk_insert_sql.rs  build_insert_or_update_sql.rs  build_insert_sql.rs  build_update_sql.rs  build_upsert_sql.rs  mod.rs  raw_field.rs  select_builder.rs  sql_string.rs  sql_values.rs  update_value.rs  upsert_columns.rs  where_builder.rs
src/sql_concurrent_ops/: concurrent_insert_or_update.rs  mod.rs
src/sql_delete/: build_bulk_delete.rs  build_delete.rs  mod.rs
src/sql_insert/: bulk_insert_builder.rs  bulk_insert_or_update_builder.rs  insert_builder.rs  insert_if_not_exists_builder.rs  insert_or_update_builder.rs  mod.rs  model.rs  value.rs
src/sql_schema/: dto_schema.rs  mod.rs
src/sql_select/: build.rs  bulk_select_builder.rs  count_with_group_by.rs  from_db_row.rs  group_by.rs  group_by_count.rs  mod.rs  model.rs  order_by.rs  select_entity.rs  (+3 more)
(+91 files in other folders)
