[package]
name = "my-postgres"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-tls = ["postgres-openssl", "openssl"]
with-logs-and-telemetry = ["my-telemetry"]
failed-sql-to-console = []

[dependencies]
postgres-openssl = { version = "*", optional = true }
openssl = { version = "*", optional = true }

tokio-postgres = { version = "*", features = ["with-chrono-0_4"] }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
async-trait = "*"
tokio = { version = "*", features = ["full"] }
my-telemetry = { tag = "0.2.2", optional = true, git = "https://github.com/MyJetTools/my-telemetry.git" }
