[package]
name = "my-postgres"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-tls = ["postgres-openssl", "openssl"]
with-logs-and-telemetry = ["my-telemetry"]


[dependencies]
postgres-openssl = { version = "*", optional = true }
openssl = { version = "*", optional = true }

tokio-postgres = { version = "*", features = ["with-chrono-0_4"] }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "objects-pool",
] }
async-trait = "*"
tokio = { version = "*", features = ["full"] }
my-telemetry = { tag = "0.3.0", optional = true, git = "https://github.com/MyJetTools/my-telemetry.git" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
