[package]
name = "my-postgres-core"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-tls = ["postgres-openssl", "openssl"]
with-logs-and-telemetry = ["my-telemetry"]
with-ssh = ["my-ssh"]

[dependencies]
my-json = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-json.git" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "objects-pool",
    "with-tokio",
] }
my-telemetry = { tag = "1.3.0", optional = true, git = "https://github.com/MyJetTools/my-telemetry.git" }


my-logger = { tag = "1.3.0", git = "https://github.com/MyJetTools/my-logger.git" }

tokio = { version = "*", features = ["full"] }
tokio-postgres = { version = "*", features = ["with-chrono-0_4"] }
serde = { version = "*", features = ["derive"] }
async-trait = "*"
serde_json = "*"
lazy_static = "*"
futures-util = "*"


#tls
postgres-openssl = { version = "*", optional = true }
openssl = { version = "*", optional = true }

[target.'cfg(unix)'.dependencies]
my-ssh = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-ssh.git", optional = true }
