[package]
name = "my-postgres"
version = "0.5.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
macros = ["dep:my-postgres-macros"]
debug-table-schema = ["my-postgres-macros?/debug-table-schema"]
with-tls = ["my-postgres-core/with-tls"]
with-ssh = ["my-postgres-core/with-ssh"]
with-telemetry = ["my-postgres-core/with-logs-and-telemetry"]

[dependencies]
my-postgres-macros = { optional = true, path = "../my-postgres-macros" }
my-postgres-core = { path = "../my-postgres-core" }
